--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,3 +4,4 @@ steps:
     args: ['build', '-t', 'gcr.io/$PROJECT_ID/ici:$BUILD_ID', '.']
 images:
   - 'gcr.io/$PROJECT_ID/ici:$BUILD_ID'
+logsBucket: 'gs://your-cloud-storage-bucket'  # Replace with your bucket name
