--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,4 +4,5 @@ steps:
     args: ['build', '-t', 'gcr.io/$PROJECT_ID/ici:$BUILD_ID', '.']
 images:
   - 'gcr.io/$PROJECT_ID/ici:$BUILD_ID'
-logsBucket: 'gs://your-cloud-storage-bucket'  # Replace with your bucket name
+logsBucket: 'gs://zip-myl-dev'
+loggingService: 'logging.googleapis.com'
