--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,4 +3,4 @@ steps:
     args: ['build', '-t', 'gcr.io/$PROJECT_ID/ici:$BUILD_ID', '.']
 images:
   - 'gcr.io/$PROJECT_ID/ici:$BUILD_ID'
-logsBucket: 'gs://zip-myl-dev'
+logsBucket: '${_LOGS_BUCKET}'
