--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,5 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/ici:$BUILD_ID', '.']
+    args: ['build', '--build-arg', 'CACHE_BUST=${_CACHE_BUST}', '-t', 'gcr.io/$PROJECT_ID/ici:$BUILD_ID', '.']
 images:
   - 'gcr.io/$PROJECT_ID/ici:$BUILD_ID'
-logsBucket: '${_LOGS_BUCKET}'
