--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,16 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '--build-arg', 'CACHE_BUST=${_CACHE_BUST}', '-t', 'gcr.io/$PROJECT_ID/ici:$BUILD_ID', '.']
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args:
+      - 'run'
+      - 'deploy'
+      - '${_SERVICE_NAME}'  # Cloud Run service name
+      - '--image'
+      - 'gcr.io/$PROJECT_ID/ici:$BUILD_ID'
+      - '--platform'
+      - '${_PLATFORM}'  # Platform (e.g., managed)
+      - '--region'
+      - '${_REGION}'  # Cloud Run region
 images:
   - 'gcr.io/$PROJECT_ID/ici:$BUILD_ID'
