Update logging option in cloudbuild.yaml to use cloud_logging

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,6 +13,6 @@ steps:
       - '--region'
       - '${_REGION}'
 options:
-  logging: GCS_ONLY
+  logging: cloud_logging
 images:
   - 'gcr.io/$PROJECT_ID/ici:$BUILD_ID'
