--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,9 +15,9 @@ steps:
 options:
   logging: GCS_ONLY
 substitutions:
-    _IMAGE_NAME: "ici"
-    _SERVICE_NAME: "ici"
-    _PLATFORM: "managed"
-    _REGION: "us-west1"
+    _IMAGE_NAME: ""
+    _SERVICE_NAME: ""
+    _PLATFORM: ""
+    _REGION: ""
 images:
   - 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}:$BUILD_ID'
