--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,6 +14,6 @@ steps:
       - '${_REGION}'
 options:
   logging: GCS_ONLY
-logsBucket: '${_LOGS_BUCKET}'
+logsBucket: 'gs://${_LOGS_BUCKET}/logs'
 images:
   - 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}:$BUILD_ID'
