--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,19 +1,16 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '--build-arg', 'CACHE_BUST=$BUILD_ID', '-t', 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}:$BUILD_ID', '.']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/ici:$BUILD_ID', '.']
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - 'run'
       - 'deploy'
-      - '${_SERVICE_NAME}'
+      - 'ici'
       - '--image'
-      - 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}:$BUILD_ID'
+      - 'gcr.io/$PROJECT_ID/ici:$BUILD_ID'
       - '--platform'
-      - '${_PLATFORM}'
+      - 'managed'
       - '--region'
-      - '${_REGION}'
-options:
-  logging: GCS_ONLY
-logsBucket: 'gs://${_LOGS_BUCKET}/logs'
+      - 'us-west1'
 images:
-  - 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}:$BUILD_ID'
+  - 'gcr.io/$PROJECT_ID/ici:$BUILD_ID'
