--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,17 +1,16 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/ici:$BUILD_ID', '.']
+    args: ['build', '-t', 'us-west1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/ici:$BUILD_ID', '.']
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - 'run'
       - 'deploy'
       - 'ici'
       - '--image'
-      - 'gcr.io/$PROJECT_ID/ici:$BUILD_ID'
+      - 'us-west1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/ici:$BUILD_ID'
       - '--platform'
       - 'managed'
       - '--region'
       - 'us-west1'
 images:
-  - 'gcr.io/$PROJECT_ID/ici:$BUILD_ID'
-logsBucket: '${_LOGS_BUCKET}'
+  - 'us-west1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/ici:$BUILD_ID'
