Fix formatting in cloudbuild.yaml by ensuring proper newline and re-adding logsBucket configuration

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,3 +14,4 @@ steps:
       - 'us-west1'
 images:
   - 'us-west1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/ici:$BUILD_ID'
+logsBucket: 'gs://zip-myl-dev/logs'
