--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,22 +1,32 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'us-west1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy:$BUILD_ID', '.']
+    args:
+      - 'build'
+      - '-t'
+      - 'us-west1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/${_IMAGE_NAME}:$BUILD_ID'
+      - '--build-arg'
+      - 'CACHE_BUST=$BUILD_ID'
+      - '.'
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - 'run'
       - 'deploy'
       - '${_SERVICE_NAME}'
       - '--image'
-      - 'us-west1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy:$BUILD_ID'
+      - 'us-west1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/${_IMAGE_NAME}:$BUILD_ID'
       - '--platform'
       - '${_PLATFORM}'
       - '--region'
       - '${_REGION}'
+      - '--quiet'
 images:
-  - 'us-west1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy:$BUILD_ID'
+  - 'us-west1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/${_IMAGE_NAME}:$BUILD_ID'
 logsBucket: '${_LOGS_BUCKET}'
+options:
+  logging: GCS_ONLY
 substitutions:
   _SERVICE_NAME: 'ici'
   _PLATFORM: 'managed'
   _REGION: 'us-west1'
+  _IMAGE_NAME: 'ici' # Default image name
   _LOGS_BUCKET: 'gs://zip-myl-dev/logs'
