Update cloudbuild.yaml to change service and image names to 'zip-myl-dev'

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -25,8 +25,8 @@ logsBucket: '${_LOGS_BUCKET}'
 options:
   logging: GCS_ONLY
 substitutions:
-  _SERVICE_NAME: 'ici'
+  _SERVICE_NAME: 'zip-myl-dev'
   _PLATFORM: 'managed'
   _REGION: 'us-west1'
-  _IMAGE_NAME: 'ici' # Default image name
+  _IMAGE_NAME: 'zip-myl-dev' # Default image name
   _LOGS_BUCKET: 'gs://zip-myl-dev/logs'
