--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,12 +1,19 @@
 steps:
+  - name: 'gcr.io/cloud-builders/gcloud' # Using gcloud image as it has common shell tools
+    id: 'List Workspace Contents'
+    entrypoint: 'ls'
+    args: ['-la', '/workspace']
   - name: 'gcr.io/cloud-builders/docker'
+    id: 'Build Docker Image' # Added id for clarity
     args:
       - 'build'
       - '-t'
       - 'us-west1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/${_IMAGE_NAME}:$BUILD_ID'
       - '--build-arg'
       - 'CACHE_BUST=$BUILD_ID'
-      - '.'
+      - '-f' # Explicitly specify the Dockerfile
+      - 'Dockerfile' # Name of the Dockerfile
+      - '.' # Build context (current directory /workspace)
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - 'run'
