--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,33 +1,20 @@
 steps:
-  - name: 'gcr.io/cloud-builders/gcloud' # Using gcloud image as it has common shell tools
-    id: 'List Workspace Contents'
-    entrypoint: 'ls'
-    args: ['-la', '/workspace']
   - name: 'gcr.io/cloud-builders/docker'
-    id: 'Build Docker Image' # Added id for clarity
     args:
-      - 'build'
-      - '-t'
-      - 'us-west1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/${_IMAGE_NAME}:$BUILD_ID'
-      - '--build-arg'
-      - 'CACHE_BUST=$BUILD_ID'
-      - '-f' # Explicitly specify the Dockerfile
-      - 'Dockerfile' # Name of the Dockerfile
-      - '.' # Build context (current directory /workspace )
+      [
+        'build', '-t',
+        'us-west1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/test-hello:$BUILD_ID',
+        '.'
+      ]
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
-      - 'run'
-      - 'deploy'
-      - '${_SERVICE_NAME}'
-      - '--image'
-      - 'us-west1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/${_IMAGE_NAME}:$BUILD_ID'
-      - '--platform'
-      - '${_PLATFORM}'
-      - '--region'
-      - '${_REGION}'
-      - '--quiet'
+      [
+        'run', 'deploy', 'test-hello',
+        '--image', 'us-west1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/test-hello:$BUILD_ID',
+        '--region', 'us-west1',
+        '--platform', 'managed',
+        '--allow-unauthenticated',
+        '--quiet'
+      ]
 images:
-  - 'us-west1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/${_IMAGE_NAME}:$BUILD_ID'
-logsBucket: '${_LOGS_BUCKET}'
-options:
-  logging: GCS_ONLY
+  - 'us-west1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/test-hello:$BUILD_ID'
