--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,6 @@
 steps:
-- name: 'gcr.io/cloud-builders/gcloud'
-  args: ['version']
+  - name: 'gcr.io/cloud-builders/docker'
+    args: [ 'build', '-t', 'us-west1-docker.pkg.dev/myproject/myimage', '.' ]
+logsBucket: 'gs://zip-myl-dev/logs'
+options:
+  logging: GCS_ONLY
