Refactor testing suite and remove outdated files
- Updated `test_endpoints.ps1` to replace `/env-id-html` with `/system-info` and removed unnecessary tests.
- Deleted `test_endpoints_win.ps1`, `test_memory_system.ps1`, `test_payload.json`, `test_restart_fix.html`, `test_results_final.md`, `test_vault.json`, and `test_vault_data.json` for outdated or redundant content.
- Added `factory.py` to initialize the Flask application with progressive startup and SocketIO support.
- Created `README.md` for the testing suite with detailed instructions and current test files.
- Implemented new functionality tests in `test_jeanne_functionality.py` and `test_who_is_complete.py` for enhanced memory system queries.

--- a/.dockerignore
+++ b/.dockerignore
@@ -33,7 +33,7 @@ test_results_final.md
 test_vault.json
 test_payload.json
 test_memory_system.ps1
-run_refactored.py
+# Remove run_refactored.py reference - file no longer exists
 start.bat
 daily_health_check.ps1
 test_endpoints_win.ps1
